# venus-winui

./: .gitignore  CMakeLists.txt  Venus.sln
ConsoleApp1/: ConsoleApp1.csproj  Program.cs
Venus/: MainWindow.idl  MainWindow.xaml  MainWindow.xaml.cpp  MainWindow.xaml.h  Venus.vcxproj  Venus.vcxproj.filters
Venus.Common/: CMakeLists.txt
Venus.Common/logger/: logger.cpp  logger.h
Venus.Native/: AssemblyInfo.cpp  CMakeLists.txt  Venus.Native.cpp  Venus.Native.h  Venus.Native.vcxproj  Venus.Native.vcxproj.filters
Venus.Native/logger/: logger.cpp  logger.h
Venus.UI/: MainWindow.xaml.cs  Venus.UI.csproj
Venus.UI/Properties/: launchSettings.json
